--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.bussolalabs.popularmovies" >
+    package="com.bussolalabs.popularmovies">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_popmovie"
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
             android:name=".activity.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -21,7 +21,7 @@
         <activity
             android:name=".activity.DetailActivity"
             android:label="@string/title_activity_detail"
-            android:parentActivityName=".activity.MainActivity" >
+            android:parentActivityName=".activity.MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".activity.MainActivity" />
@@ -30,11 +30,18 @@
             android:name=".custom.SettingsActivity"
             android:label="@string/title_activity_settings"
             android:parentActivityName=".activity.MainActivity"
-            android:theme="@android:style/Theme.Holo.Light" >
+            android:theme="@android:style/Theme.Holo.Light">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.bussolalabs.popularmovies.activity.MainActivity" />
         </activity>
+        <activity android:name=".activity.VideosActivity" />
+        <activity android:name=".activity.ReviewsActivity" />
+        <activity android:name=".activity.ReviewDetailActivity"></activity>
+
+        <provider
+            android:authorities="com.bussolalabs.popularmovies"
+            android:name=".db.PopularMoviesProvider" />
     </application>
 
 </manifest>
